--- a/source code/qmdp-web/index.html
+++ b/source code/qmdp-web/index.html
@@ -39,8 +39,8 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">首页</a></li>
-						<li><a href="">当铺商城</a></li>
-						<li><a href="">关于我们</a></li>
+						<li><a href="mall.html"  target="__bank">当铺商城</a></li>
+						<li><a href="about.html">关于我们</a></li>
 					</ul>
 				</div>
 			</div>
