--- a/source code/qmdp-web/mall.html
+++ b/source code/qmdp-web/mall.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta name="renderer" content="webkit">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>全民当铺</title>
 
 <!-- core CSS -->
@@ -144,7 +146,7 @@
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
-									<a><img class="media-object carousel-inner img-responsive" src="images/goods/1.jpg" alt=""></a>
+									<a href="details.html"><img class="media-object carousel-inner img-responsive" src="images/goods/1.jpg" alt=""></a>
 								</div>
 								<div class="media-body">
 									<div>
