--- a/source code/qmdp-web/index.html
+++ b/source code/qmdp-web/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta name="renderer" content="webkit">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>全民当铺</title>
 
 <!-- core CSS -->
@@ -39,7 +41,7 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">首页</a></li>
-						<li><a href="mall.html"  target="__bank">当铺商城</a></li>
+						<li><a href="mall.html" target="__bank">当铺商城</a></li>
 						<li><a href="about.html">关于我们</a></li>
 					</ul>
 				</div>
@@ -262,7 +264,7 @@
 		<!--/.container-->
 	</section>
 	<!--/#raising-->
-	
+
 	<section id="plan-raise">
 		<div class="container">
 			<!-- our-team -->
@@ -406,7 +408,7 @@
 		<!--/.container-->
 	</section>
 	<!--/#plan-raise-->
-	
+
 	<section id="raised">
 		<div class="container">
 			<!-- our-team -->
@@ -478,7 +480,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<!--/.col-lg-4 -->					
+					<!--/.col-lg-4 -->
 				</div>
 				<!--/.row -->
 			</div>
