--- a/source code/qmdp-web/details.html
+++ b/source code/qmdp-web/details.html
@@ -61,8 +61,8 @@
 		<div class="row">
 			<div class="container">
 				<ol class="breadcrumb">
-					<li><a href="#">首页</a></li>
-					<li><a href="#">长安街当铺</a></li>
+					<li><a href="mall.html">首页</a></li>
+					<li><a href="mall.html">长安街当铺</a></li>
 					<li class="active">玉石</li>
 				</ol>
 			</div>
@@ -70,9 +70,7 @@
 	</header>
 	<!--/header-->
 
-	<section class="no-margin"></section>
-
-	<section id="raising">
+	<section>
 		<div class="container">
 			<div class="row clearfix">
 				<div class="col-md-4 col-sm-4">
@@ -84,7 +82,6 @@
 							<li><img src="images/goods/2.jpg" alt=""></li>
 							<li><img src="images/goods/3.jpg" alt=""></li>
 							<li><img src="images/goods/4.jpg" alt=""></li>
-							<li><img src="images/goods/6.jpg" alt=""></li>
 						</ul>
 					</div>
 				</div>
@@ -119,8 +116,32 @@
 		<!--/.container-->
 	</section>
 
+
 	<section>
-		<div class=" container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+		<div class="container">
+			<div class="row">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<h3>商品详情</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 no-margin">
+					<img class="media-object carousel-inner img-responsive" src="images/goods/2.jpg" alt="">
+				</div>
+				<div class="col-xs-12 no-margin">
+					<img class="media-object carousel-inner img-responsive" src="images/goods/6.jpg" alt="">
+				</div>
+				<div class="col-xs-12 no-margin">
+					<img class="media-object carousel-inner img-responsive" src="images/goods/7.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 			<div class="row">
 				<div class="col-md-5">
 					<div class="line"></div>
@@ -178,8 +199,13 @@
 	<footer id="footer" class="midnight-blue">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 h2">全民当铺众筹网</div>
-				<div class="col-sm-6"></div>
+				<div class="col-sm-6 h2">全民当铺商城</div>
+				<div class="col-sm-6">
+					<ul>
+						<li><a href="index.html">众筹网</a></li>
+						<li><a href="about.html">关于我们</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="row">Copyright @ 2017 All Right Reserved 成都全民当铺有限公司 版权所有 蜀ICP备1165828号-1</div>
 		</div>
