--- a/source code/qmdp-web/mall.html
+++ b/source code/qmdp-web/mall.html
@@ -52,9 +52,9 @@
 								<li><a href="">八宝街当铺</a></li>
 								<li><a href="">武侯祠当铺</a></li>
 							</ul></li>
-						<li><a href="">首页</a></li>
-						<li><a href="mall.html">热门</a></li>
-						<li><a href="">积分</a></li>
+						<li class="active"><a href="#">首页</a></li>
+						<li><a href="popular.html">热门</a></li>
+						<li><a href="points.html">积分</a></li>
 					</ul>
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 				</div>
 
 				<div class="row clearfix">
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -158,7 +158,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -174,7 +174,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -190,7 +190,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -206,7 +206,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -222,7 +222,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -238,7 +238,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -272,7 +272,7 @@
 				</div>
 
 				<div class="row clearfix">
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -288,7 +288,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -304,7 +304,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -320,7 +320,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -336,7 +336,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -352,7 +352,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
@@ -368,7 +368,7 @@
 							<!--/.media -->
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-3">
+					<div class="col-md-4 col-sm-3">
 						<div class="single-profile-top">
 							<div class="media">
 								<div>
