--- a/source code/qmdp-web/points.html
+++ b/source code/qmdp-web/points.html
@@ -39,8 +39,8 @@
 								<li><a href="">武侯祠当铺</a></li>
 							</ul></li>
 						<li><a href="mall.html">首页</a></li>
-						<li><a href="#">热门</a></li>
-						<li class="active"><a href="points.html">积分</a></li>
+						<li><a href="popular.html">热门</a></li>
+						<li class="active"><a href="#">积分</a></li>
 					</ul>
 				</div>
 			</div>
