--- a/demo/qmdpAdmin/_index.html
+++ b/demo/qmdpAdmin/_index.html
@@ -9,96 +9,130 @@ Purchase: http://wrapbootstrap.com
 
 <!-- Head -->
 <head>
-    <meta charset="utf-8"/>
-    <title>全民当铺</title>
+<meta charset="utf-8" />
+<title>全民当铺</title>
 
-    <meta name="description" content="index"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+<meta name="description" content="index" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="shortcut icon" href="assets/img/favicon.png"
+	type="image/x-icon">
 
-    <!--Basic Styles-->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link id="bootstrap-rtl-link" href="" rel="stylesheet"/>
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="assets/css/weather-icons.min.css" rel="stylesheet"/>
+<!--Basic Styles-->
+<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+<link id="bootstrap-rtl-link" href="" rel="stylesheet" />
+<link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+<link href="assets/css/weather-icons.min.css" rel="stylesheet" />
 
-    <!--Beyond styles-->
-    <link id="beyond-link" href="assets/css/beyond.min.css" rel="stylesheet"/>
-    <link href="assets/css/demo.min.css" rel="stylesheet"/>
-    <link href="assets/css/typicons.min.css" rel="stylesheet"/>
-    <link href="assets/css/animate.min.css" rel="stylesheet"/>
-    <link id="skin-link" href="" rel="stylesheet" type="text/css"/>
+<!--Beyond styles-->
+<link id="beyond-link" href="assets/css/beyond.min.css" rel="stylesheet" />
+<link href="assets/css/demo.min.css" rel="stylesheet" />
+<link href="assets/css/typicons.min.css" rel="stylesheet" />
+<link href="assets/css/animate.min.css" rel="stylesheet" />
+<link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
-    <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-    <script src="assets/js/skins.min.js"></script>
+<!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
+<script src="assets/js/skins.min.js"></script>
 
-    <style type="text/css">
-        .navbar {
-            background-color: rgba(255, 255, 255, 0.8);
-            font-size: 17px;
-            height: auto;
-        }
+<style type="text/css">
+.navbar {
+	background-color: rgba(255, 255, 255, 0.8);
+	font-size: 17px;
+	height: auto;
+}
 
-        .navbar-default .navbar-nav > .active > a,
-        .navbar-default .navbar-nav > .active > a:hover,
-        .navbar-default .navbar-nav > .active > a:focus {
-            color: #ff000c;
-            background-color: #ffffff;
-        }
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
+	.navbar-default .navbar-nav>.active>a:focus {
+	color: #ff000c;
+	background-color: rgba(255, 255, 255, 0);
+}
 
-        .navbar-default .navbar-nav > li > a:hover {
-            color: #ff000c;
-            border-bottom: solid 2px #16caff;
-        }
+.navbar-default .navbar-nav>li>a:hover {
+	color: #ff000c;
+	border-bottom: solid 2px #16caff;
+}
 
-        .navbar-default .navbar-nav > li > a {
-            color: #060606;
-        }
+.navbar-default .navbar-nav>li>a {
+	color: #060606;
+}
 
-        .navbar .navbar-brand {
-            padding: 15px;
-            color: #666666;
-        }
-    </style>
+.navbar .navbar-brand {
+	padding: 15px;
+	color: #666666;
+}
+
+.carousel {
+	height: 400px;
+}
+
+.carousel .item img {
+	width: 100%;
+}
+
+.carousel .item {
+	max-height: 400px;
+}
+</style>
 </head>
 <!-- /Head -->
 <!-- Body -->
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header margin-right-50">
-            <a class="navbar-brand" href="#">全民当铺</a>
-        </div>
-        <div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">当铺商城</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header margin-right-50">
+				<a class="navbar-brand" href="#">全民当铺</a>
+			</div>
+			<div>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">首页</a></li>
+					<li><a href="#">关于我们</a></li>
+					<li><a href="#">当铺商城</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-<div class="margin-top-50">
-    123131231233
-</div>
+	<div>
+		<div id="carousel-example-generic" class="carousel slide"
+			data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0"
+					class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
 
-<!--Basic Scripts-->
-<script src="assets/js/jquery-2.0.3.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="assets/img/bg1.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/bg2.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/bg3.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
 
-<!--Beyond Scripts-->
-<script src="assets/js/beyond.min.js"></script>
+	<div>112313123213232121321313212313132</div>
 
-<!--Page Related Scripts-->
+	<!--Basic Scripts-->
+	<script src="assets/js/jquery-2.0.3.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+
+	<!--Beyond Scripts-->
+	<script src="assets/js/beyond.min.js"></script>
+
+	<!--Page Related Scripts-->
 
 
-<script>
-
-
-</script>
+	<script>
+		
+	</script>
 </body>
 <!--  /Body -->
 </html>
