--- a/demo/qmdpAdmin/_lowerarch.html
+++ b/demo/qmdpAdmin/_lowerarch.html
@@ -149,11 +149,11 @@ Purchase: http://wrapbootstrap.com
                         <a href="_lowerlist.html">人员列表</a>
                     </div>
                     <div class="nav-link padding-5">
-                        <a href="#">人员架构</a>
+                        <a href="_lowerarch.html">人员架构</a>
                     </div>
                     <div class="margin-top-10 nav-title">项目支持</div>
                     <div class="nav-link padding-10">
-                        <a href="#section1">已投项目</a>
+                        <a href="_userpro.html">已投项目</a>
                     </div>
                 </div>
             </div>
