--- a/demo/qmdpAdmin/_userinfo.html
+++ b/demo/qmdpAdmin/_userinfo.html
@@ -138,23 +138,23 @@ Purchase: http://wrapbootstrap.com
                         <img src="assets/img/avatars/John-Smith.jpg" class="img-circle">
                     </div>
                     <div class="margin-top-20 nav-title">个人信息</div>
-                    <div class="nav-link padding-5">
-                        <a href="_userupdate.html">个人资料</a>
-                    </div>
-                    <div class="nav-link padding-5">
-                        <a href="#section2">密码修改</a>
-                    </div>
-                    <div class="margin-top-10 nav-title">盈利分析</div>
-                    <div class="nav-link padding-5">
-                        <a href="#section1">人员列表</a>
-                    </div>
-                    <div class="nav-link padding-5">
-                        <a href="#section2">人员架构</a>
-                    </div>
-                    <div class="margin-top-10 nav-title">项目支持</div>
-                    <div class="nav-link padding-10">
-                        <a href="#section1">已投项目</a>
-                    </div>
+						<div class="nav-link padding-5">
+							<a href="_userupdate.html">个人资料</a>
+						</div>
+						<div class="nav-link padding-5">
+							<a href="_userpwd.html">密码修改</a>
+						</div>
+						<div class="margin-top-10 nav-title">盈利分析</div>
+						<div class="nav-link padding-5">
+							<a href="_lowerlist.html">人员列表</a>
+						</div>
+						<div class="nav-link padding-5">
+							<a href="_lowerarch.html">人员架构</a>
+						</div>
+						<div class="margin-top-10 nav-title">项目支持</div>
+						<div class="nav-link padding-10">
+							<a href="_userpro.html">已投项目</a>
+						</div>
                 </div>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
