--- a/demo/qmdpAdmin/_userpwd.html
+++ b/demo/qmdpAdmin/_userpwd.html
@@ -137,7 +137,7 @@ Purchase: http://wrapbootstrap.com
                         <a href="_userupdate.html">个人资料</a>
                     </div>
                     <div class="nav-link padding-5">
-                        <a href="#">密码修改</a>
+                        <a href="_userpwd.html">密码修改</a>
                     </div>
                     <div class="margin-top-10 nav-title">盈利分析</div>
                     <div class="nav-link padding-5">
@@ -148,7 +148,7 @@ Purchase: http://wrapbootstrap.com
                     </div>
                     <div class="margin-top-10 nav-title">项目支持</div>
                     <div class="nav-link padding-10">
-                        <a href="#section1">已投项目</a>
+                        <a href="_userpro.html">已投项目</a>
                     </div>
                 </div>
             </div>
