--- a/demo/qmdpAdmin/_lowerlist.html
+++ b/demo/qmdpAdmin/_lowerlist.html
@@ -144,14 +144,14 @@ Purchase: http://wrapbootstrap.com
                     </div>
                     <div class="margin-top-10 nav-title">盈利分析</div>
                     <div class="nav-link padding-5">
-                        <a href="#">人员列表</a>
+                        <a href="_lowerlist.html">人员列表</a>
                     </div>
                     <div class="nav-link padding-5">
                         <a href="_lowerarch.html">人员架构</a>
                     </div>
                     <div class="margin-top-10 nav-title">项目支持</div>
                     <div class="nav-link padding-10">
-                        <a href="#section1">已投项目</a>
+                        <a href="_userpro.html">已投项目</a>
                     </div>
                 </div>
             </div>
