--- a/demo/qmdpAdmin/_userupdate.html
+++ b/demo/qmdpAdmin/_userupdate.html
@@ -141,7 +141,7 @@ Purchase: http://wrapbootstrap.com
                     </div>
                     <div class="margin-top-20 nav-title">个人信息</div>
                     <div class="nav-link padding-5">
-                        <a href="#">个人资料</a>
+                        <a href="_userupdate.html">个人资料</a>
                     </div>
                     <div class="nav-link padding-5">
                         <a href="_userpwd.html">密码修改</a>
@@ -155,7 +155,7 @@ Purchase: http://wrapbootstrap.com
                     </div>
                     <div class="margin-top-10 nav-title">项目支持</div>
                     <div class="nav-link padding-10">
-                        <a href="#section1">已投项目</a>
+                        <a href="_userpro.html">已投项目</a>
                     </div>
                 </div>
             </div>
